<resources>
    <string name="app_name">Just Java</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="default_quantity">1</string>
    <string name="quantity_header">Quantity</string>
    <string name="total_prefix">Total: R </string>
    <string name="total_default">26</string>
    <string name="order">order</string>
    <string name="toppings_header">Toppings</string>
    <string name="whipped_cream_topping">Whipped cream</string>
    <string name="chocolate_topping">Chocolate sauce</string>
    <string name="name_header">Your Name</string>
    <string name="name_hint">Enter your name here</string>
    <string name="no_increase">Cannot add more coffee\'s to your order.</string>
    <string name="no_decrease">Cannot decrease quantity of your order.</string>
    <string name="MAILTO_title">Just Java Order!</string>
</resources>
