<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/name_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_header"
        android:textAppearance="?android:textAppearanceLarge"
        android:paddingTop="@dimen/padding_top"
        android:paddingBottom="@dimen/small_padding_bottom"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <EditText
        android:id="@+id/name_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_hint"
        android:paddingLeft="@dimen/small_padding_left"
        android:paddingRight="@dimen/small_padding_right"
        android:paddingStart="@dimen/small_padding_left"
        android:paddingEnd="@dimen/small_padding_right"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_header"
        />

    <TextView
        android:id="@+id/toppings_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toppings_header"
        android:textAppearance="?android:textAppearanceLarge"
        android:paddingTop="@dimen/padding_top"
        android:paddingBottom="@dimen/small_padding_bottom"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_field"
        />

    <LinearLayout
        android:id="@+id/toppings_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toppings_header"
        >

        <CheckBox
            android:id="@+id/whipped_cream_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/whipped_cream_topping"
            android:paddingTop="@dimen/small_padding_top"
            />

        <CheckBox
            android:id="@+id/chocolate_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chocolate_topping"
            android:paddingTop="@dimen/small_padding_top"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/quantity_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity_header"
        android:textAppearance="?android:textAppearanceLarge"
        android:paddingTop="@dimen/padding_top"
        android:paddingBottom="@dimen/small_padding_bottom"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toppings_group"
        />

    <include
        layout="@layout/quantity_selector"
        android:id="@+id/quantity_selector"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/quantity_header"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingTop="@dimen/padding_top"
        app:layout_constraintTop_toBottomOf="@id/quantity_selector"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        >

        <TextView
            android:id="@+id/total_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_prefix"
            android:textAppearance="?android:textAppearanceMedium"
            />

        <TextView
            android:id="@+id/total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_default"
            android:textAppearance="?android:textAppearanceMedium"
            android:paddingStart="@dimen/padding_left"
            android:paddingEnd="0dp"
            android:paddingLeft="@dimen/padding_left"
            android:paddingRight="0dp"
            />

    </LinearLayout>

    <Button
        android:id="@+id/order_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

</android.support.constraint.ConstraintLayout>